--- a/PadelAdmin/css/card-de-jugadores.css
+++ b/PadelAdmin/css/card-de-jugadores.css
@@ -1,3 +1,19 @@
+/* --- --- COLORS --- --- */
+/* --- --- #0D222A --- --- */
+/* --- --- #9C9C9C --- --- */
+/* --- --- #03080B --- --- */
+/* --- --- #FEFEFE --- --- */
+/* --- --- #A2D5E9 --- --- */
+/* --- --- #F0F2F5 --- --- */
+/* --- --- #DDDDDD --- --- */
+/* --- --- #F2C94C --- --- */
+/* --- --- #219653 --- --- */
+/* --- --- #1F5266 --- --- */
+/* --- --- #F2994A --- --- */
+/* --- --- #EB5757 --- --- */
+/* --- --- #3384A5 --- --- */
+/* --- --- #2D9CDB --- --- */
+
 body {
     background: #F0F2F5;
     font-family: 'Poppins', sans-serif;
@@ -8,157 +24,152 @@ body {
 
 .barra-lateral {
     background: #3384A5;
+    min-width: 250px;
     min-height: 100vh;
-    width: 250px;
     padding: 0;
 }
 
 .barra-lateral .logo {
-    padding: 20px;
+    background: #2D9CDB;
+    padding: 20PX;
     text-align: center;
-}
-
-.barra-lateral .logo h2{
-    font-size: 20px;
+    color: #F0F2F5;
     margin: 0;
 }
 
 .barra-lateral .menu a{
-    display: block;
-    padding: 20px;
-    color: #fefefe;
     border-bottom: 1px solid rgba(250, 250, 250, .1);
+    display: block;
     font-size: 16px;
-    font-weight: 400;
+    color: #fefefe;
+    padding: 20px;
 }
 
 .barra-lateral .menu a:hover {
-    background: #A2D5E9;
+    background: rgba(250, 250, 250, .1);
     text-decoration: none;
-    color: #03080B;
 }
-
 .barra-lateral .menu a i {
     margin-right: 20px;
 }
 
-.barra-lateral .cerrar-sesion {
-    margin-top: 40px;
-    margin-right: 15px;
-}
-.barra-lateral .cerrar-sesion a{
-    color: #fefefe;
-    font-size: 16px;
-    font-weight: 300;
-}
-
 /* --- --- HEADER --- --- */
 
-.header-contenedor .header {
+.main {
     margin-top: 20px;
-    margin-bottom: 20px;
-}
-
-.header-contenedor .header .ruta .link-s,
-.header-contenedor .header .ruta p {
-    color: #03080B;
-    font-size: 16px;
-    font-weight: 300;
-    margin: 0;
-}
-
-.header-contenedor .header .ruta .link-p {
-    color: #03080B;
-    font-size: 20px;
-    font-weight: 400;
-}
-
-.header-contenedor .header .profile .profile-notification p {
-    color: #2D9CDB;
-    font-size: 18px;
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: 30px;
     margin-right: 30px;
 }
-.header-contenedor .header .profile p {
+
+.col-12 {
+    padding-left: 0;
+}
+
+.main .breadcrumb {
+    background: none;
+    margin-bottom: 0;
+    padding-left: 0;
+}
+
+.main .contenedor {
+    display: flex;
+}
+
+.main .contenedor .profile {
+    display: flex;
+}
+
+.main .contenedor .profile .admin-name{
+    color: #03080B;
+    margin-right: 5px;
     font-size: 14px;
-    font-weight: 500;
-    margin: 0;
 }
 
-.header-contenedor .header .profile .profile-img {
-    width: 45px;
-    height: 45px;
+.main .contenedor .profile .photo {
+    border: 2px solid #2D9CDB;
     border-radius: 100%;
-    border: 2px solid #9C9C9C;
+    width: 40px;
+    height: 40px;
     overflow: hidden;
-    margin-left: 10px;
 }
 
-.header-contenedor .header .profile .profile-img img {
+.main .contenedor .profile .photo a img {
     width: 100%;
 }
 
-/* --- --- OPCIONES DE BÚSQUEDA --- --- */
+/* --- --- OPTION --- --- */
 
-.op-busqueda .filtros button {
-    border: 2px solid #2D9CDB;
-    border-radius: 5px;
-    width: 100px;
-    height: 40px;
-
+.main .option  {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+    align-items: center;
 }
 
-.op-busqueda .filtros button i {
+.main .option .option-contenedor .filtros {
+    border: 1px solid #2D9CDB;
+    border-radius: 3px;
+    height: 30px;
+}
+
+.main .option .option-contenedor .filtros i {
     margin-right: 5px;
 }
 
-.op-busqueda .filtros button:hover {
+.main .option .option-contenedor .filtros:hover {
     background: #2D9CDB;
     color: #fefefe;
 }
 
-.op-busqueda .others input[type="search"] {
-    border: 2px solid #DDDDDD;
-    border-radius: 10px;
+.main .option .option-contenedor input[type="search"] {
+    border: 1px solid #DCDCDC;
+    border-radius: 5px;
     background: none;
-    padding: 5px;
-    margin-right: 20px;
     width: 300px;
-    height: 40;
+    padding: 3px 10px 3px 10px;
+    background-image: url(../img/icon-search.png);
+    background-repeat: no-repeat;
+    background-position: right;
+    background-size: 24px;
 }
 
-.op-busqueda .others i {
+.main .option .option-contenedor a i {
+    margin: 0 20px;
     color: #2D9CDB;
-    font-size: 20px;
+    font-size: 18px;
 }
 
-.op-busqueda .others button {
+.main .option .option-contenedor a i:hover {
+    color: #3384A5;
+}
+
+.main .option .option-contenedor .agregar {
     border: none;
     border-radius: 5px;
-    color: #fefefe;
-    font-size: 16px;
-    font-weight: 500;
     background: #2D9CDB;
-    padding: 5px;
-    width: 120px;
-    margin-left: 20px;
-    
+    color: #fefefe;
+    font-size: 14px;
+    font-weight: 400;
+    padding: 5px 20px;
 }
 
-.op-busqueda .others button:hover {
+.main .option .option-contenedor .agregar:hover {
     background: #3384A5;
 }
 
-/* --- --- JUGADORES --- --- */
+/* --- --- CONTENEDOR CARD JUGADORES --- --- */
 
-.like-h2 {
+.main .title-h2 {
     display: inline-block;
     border-bottom: 2px solid #2D9CDB;
     font-size: 24px;
     font-weight: 400;
     margin-top: 25px;
-}
+} 
 
-.like-h2:after {
+.main .title-h2::after {
     content: "";
     position: absolute;
     display: block;
@@ -166,82 +177,198 @@ body {
     height: 0;
     left: 0;
     margin-top: 1px;
-    border-bottom: 1px solid #9C9C9C;
+    border-bottom: 1px solid #DCDCDC;
     z-index: -1;
 }
 
-.jugadores .contenedor-jugador {
-    background: #fefefe;
-    border-radius: 20px;
-    width: 330px;
-    height: 400px;
-    padding: 20px;
+.main .jugadores {
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
-.jugadores .contenedor-jugador .img-profile {
-    border: 3px solid #9C9C9C;
+.main .jugadores .contenedor-jugador {
+    border-radius: 20px;
+    background: #fefefe;
+    padding: 20px;
+    width: 100%;
+    max-width: 337px;
+    margin: auto;
+    margin-bottom: 30px;
+}
+
+.main .jugadores .contenedor-jugador .jugador-img {
+    border: 2px solid #DCDCDC;
     border-radius: 100%;
     width: 140px;
     height: 140px;
     overflow: hidden;
+    margin: auto;
 }
 
-.jugadores .contenedor-jugador .img-profile img {
+.main .jugadores .contenedor-jugador .jugador-img img {
     width: 100%;
 }
 
-.jugadores .contenedor-jugador .texto-p {
-    margin-top: 10px;
-}
-
-.jugadores .contenedor-jugador .texto-p p{
-    margin: 0;
+.main .jugadores .contenedor-jugador .jugador-info {
     text-align: center;
+    margin-bottom: 10px;
+}
+
+.main .jugadores .contenedor-jugador .jugador-info h4 {
+    font-size: 16px;
     font-weight: 400;
+    margin-top: 10px;
+    margin-bottom: 0;
 }
 
-.jugadores .contenedor-jugador .texto-p .titulo {
-    font-size: 20px;
-}
-
-.jugadores .contenedor-jugador .texto-p .cat {
+.main .jugadores .contenedor-jugador .jugador-info a {
     color: #2D9CDB;
+    font-size: 14px;
 }
 
-.jugadores .contenedor-jugador .texto-p .local {
+.main .jugadores .contenedor-jugador .jugador-info p {
+    margin: 0;
     color: #9C9C9C;
+    font-size: 14px;
 }
 
-.jugadores .contenedor-jugador .texto-i .info-blue {
-    color: #2D9CDB;
+.main .jugadores .contenedor-jugador .jugador-info-principal .info-principal{
+    display: flex;
+    justify-content: space-between;
 }
 
-.jugadores .contenedor-jugador .texto-i .info-red{
+.main .jugadores .contenedor-jugador .jugador-info-principal .info-principal  p{
+    margin-bottom: 8px;
+}
+
+.main .jugadores .contenedor-jugador .jugador-info-principal .info-principal .verde {
+    color: #219653;
+}
+
+.main .jugadores .contenedor-jugador .jugador-info-principal .info-principal .rojo {
     color: #EB5757;
 }
 
-.jugadores .contenedor-jugador .botones button {
-    border-radius: 5px;
-    padding: 5px;
-    width: 130px;
+.main .jugadores .contenedor-jugador .jugador-botones {
+    display: flex;
+    justify-content: space-between;
 }
-.jugadores .contenedor-jugador .botones .contacto {
-    border: 2px solid #2D9CDB;
+
+.main .jugadores .contenedor-jugador .jugador-botones .contactar,
+.main .jugadores .contenedor-jugador .jugador-botones .ver-perfil {
+    border-radius: 5px;
+    font-weight: 500;
+    width: 110px;
+    height: 30px;
+}
+
+.main .jugadores .contenedor-jugador .jugador-botones .contactar {
+    border: 1px solid #2D9CDB;
     background: none;
     color: #2D9CDB;
+    margin-bottom: 10px;
 }
 
-.jugadores .contenedor-jugador .botones .contacto:hover {
+.main .jugadores .contenedor-jugador .jugador-botones .contactar:hover {
     background: #2D9CDB;
-    color: #fefefe;
+    color: #FEFEFE;
 }
 
-.jugadores .contenedor-jugador .botones .ver-perfil {
-    background: #2D9CDB;
+.main .jugadores .contenedor-jugador .jugador-botones .ver-perfil {
     border: none;
-    color: #fefefe;
+    background: #2D9CDB;
+    color: #FEFEFE;
 }
 
-.jugadores .contenedor-jugador .botones .ver-perfil:hover {
+.main .jugadores .contenedor-jugador .jugador-botones .ver-perfil:hover {
     background: #3384A5;
+}
+
+/* --- --- MEDIAQUERY --- --- */
+
+@media screen and (max-width: 1300px) {
+
+    /* --- --- BARRA LATERAL --- --- */
+    .barra-lateral {
+        min-width: auto;
+    }
+
+    .barra-lateral .logo {
+        display: none;
+    }
+
+    .barra-lateral .menu a span {
+        display: none;
+    }
+
+    .barra-lateral .menu a i {
+        margin-right: 0;
+    }
+}
+
+@media screen and (max-width: 960px) {
+    .main .jugadores .contenedor-jugador .jugador-botones {
+        display: inline-block;
+        width: 100%;
+        
+    }
+
+    .main .jugadores .contenedor-jugador .jugador-botones .contactar, 
+    .main .jugadores .contenedor-jugador .jugador-botones .ver-perfil {
+        width: 100%;
+        
+    }
+}
+
+@media screen and (max-width: 765px) {
+
+    .main .contenedor .notification span {
+        display: none;
+    }
+
+    .main .contenedor .profile {
+        display: none;
+    }
+
+    /* --- --- OPTION --- --- */
+
+    .main .option .option-contenedor .filtros span{
+        display: none;
+    }
+
+    .main .option .option-contenedor .filtros i {
+        margin-right: 0;
+    }
+
+    .main .option .option-contenedor input[type="search"] {
+        background-image: none;
+        width: 200px;
+    }
+}
+
+@media screen and (max-width: 575px) {
+
+    /* --- --- BARRA LATERAL --- --- */
+    .barra-lateral {
+        min-height: auto;
+    }
+
+    .barra-lateral .menu {
+        text-align: center;
+    }
+
+    .barra-lateral .menu a {
+        display: inline-block;
+    }
+
+    /* --- --- OPTION --- --- */
+
+    .main .option .option-contenedor a i {
+        display: none;
+    }
+
+    .main .option .option-contenedor input {
+        display: none;
+    }
 }
