--- a/PadelAdmin/css/fontello.css
+++ b/PadelAdmin/css/fontello.css
@@ -2,12 +2,12 @@
 
  @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?67145413');
-  src: url('../font/fontello.eot?67145413#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?67145413') format('woff2'),
-       url('../font/fontello.woff?67145413') format('woff'),
-       url('../font/fontello.ttf?67145413') format('truetype'),
-       url('../font/fontello.svg?67145413#fontello') format('svg');
+  src: url('../font/fontello.eot?85013245');
+  src: url('../font/fontello.eot?85013245#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?85013245') format('woff2'),
+       url('../font/fontello.woff?85013245') format('woff'),
+       url('../font/fontello.ttf?85013245') format('truetype'),
+       url('../font/fontello.svg?85013245#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -17,7 +17,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?67145413#fontello') format('svg');
+    src: url('../font/fontello.svg?85013245#fontello') format('svg');
   }
 }
 */
@@ -66,7 +66,10 @@
 .icon-chart-pie:before { content: '\e751'; } /* '' */
 .icon-user:before { content: '\e807'; } /* '' */
 .icon-logout:before { content: '\e808'; } /* '' */
+.icon-dollar:before { content: '\f155'; } /* '' */
 .icon-sliders:before { content: '\f1de'; } /* '' */
+.icon-award:before { content: '🏉'; } /* '\1f3c9' */
+.icon-users:before { content: '👥'; } /* '\1f465' */
 .icon-calendar:before { content: '📅'; } /* '\1f4c5' */
 .icon-chart-bar:before { content: '📊'; } /* '\1f4ca' */
 .icon-newspaper:before { content: '📰'; } /* '\1f4f0' */
