--- a/PadelAdmin/css/fontello-codes.css
+++ b/PadelAdmin/css/fontello-codes.css
@@ -1,9 +1,11 @@
 @charset "UTF-8";
 
  
+.icon-plus:before { content: '\2b'; } /* '+' */
 .icon-home:before { content: '\2302'; } /* '⌂' */
 .icon-cog:before { content: '\2699'; } /* '⚙' */
 .icon-pencil:before { content: '\270e'; } /* '✎' */
+.icon-eye:before { content: '\e013'; } /* '' */
 .icon-th-large-outline:before { content: '\e0f9'; } /* '' */
 .icon-th-list-outline:before { content: '\e0fb'; } /* '' */
 .icon-trash-empty:before { content: '\e729'; } /* '' */
