--- a/PadelAdmin/css/fontello.css
+++ b/PadelAdmin/css/fontello.css
@@ -2,12 +2,12 @@
 
  @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?85013245');
-  src: url('../font/fontello.eot?85013245#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?85013245') format('woff2'),
-       url('../font/fontello.woff?85013245') format('woff'),
-       url('../font/fontello.ttf?85013245') format('truetype'),
-       url('../font/fontello.svg?85013245#fontello') format('svg');
+  src: url('../font/fontello.eot?28073477');
+  src: url('../font/fontello.eot?28073477#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?28073477') format('woff2'),
+       url('../font/fontello.woff?28073477') format('woff'),
+       url('../font/fontello.ttf?28073477') format('truetype'),
+       url('../font/fontello.svg?28073477#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -17,7 +17,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?85013245#fontello') format('svg');
+    src: url('../font/fontello.svg?28073477#fontello') format('svg');
   }
 }
 */
@@ -57,9 +57,11 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
+.icon-plus:before { content: '\2b'; } /* '+' */
 .icon-home:before { content: '\2302'; } /* '⌂' */
 .icon-cog:before { content: '\2699'; } /* '⚙' */
 .icon-pencil:before { content: '\270e'; } /* '✎' */
+.icon-eye:before { content: '\e013'; } /* '' */
 .icon-th-large-outline:before { content: '\e0f9'; } /* '' */
 .icon-th-list-outline:before { content: '\e0fb'; } /* '' */
 .icon-trash-empty:before { content: '\e729'; } /* '' */
