--- a/PadelAdmin/css/crear-torneo.css
+++ b/PadelAdmin/css/crear-torneo.css
@@ -1,4 +1,3 @@
-
 /* --- --- COLORS --- --- */
 /* --- --- #0D222A --- --- */
 /* --- --- #9C9C9C --- --- */
@@ -15,7 +14,6 @@
 /* --- --- #3384A5 --- --- */
 /* --- --- #2D9CDB --- --- */
 
-
 body {
     background: #F0F2F5;
     font-family: 'Poppins', sans-serif;
@@ -26,106 +24,92 @@ body {
 
 .barra-lateral {
     background: #3384A5;
+    min-width: 250px;
     min-height: 100vh;
-    width: 250px;
     padding: 0;
 }
 
 .barra-lateral .logo {
-    padding: 20px;
+    background: #2D9CDB;
+    padding: 20PX;
     text-align: center;
-}
-
-.barra-lateral .logo h2{
-    font-size: 20px;
+    color: #F0F2F5;
     margin: 0;
 }
 
 .barra-lateral .menu a{
-    display: block;
-    padding: 20px;
-    color: #fefefe;
     border-bottom: 1px solid rgba(250, 250, 250, .1);
+    display: block;
     font-size: 16px;
-    font-weight: 400;
+    color: #fefefe;
+    padding: 20px;
 }
 
 .barra-lateral .menu a:hover {
-    background: #A2D5E9;
+    background: rgba(250, 250, 250, .1);
     text-decoration: none;
-    color: #03080B;
 }
-
 .barra-lateral .menu a i {
     margin-right: 20px;
 }
 
-.barra-lateral .cerrar-sesion {
-    margin-top: 40px;
-    margin-right: 15px;
-}
-.barra-lateral .cerrar-sesion a{
-    color: #fefefe;
-    font-size: 16px;
-    font-weight: 300;
-}
-
 /* --- --- HEADER --- --- */
 
-.header-contenedor .header {
+.main {
     margin-top: 20px;
-    margin-bottom: 20px;
-}
-
-.header-contenedor .header .ruta .link-s,
-.header-contenedor .header .ruta p {
-    color: #03080B;
-    font-size: 16px;
-    font-weight: 300;
-    margin: 0;
-}
-
-.header-contenedor .header .ruta .link-p {
-    color: #03080B;
-    font-size: 20px;
-    font-weight: 400;
-}
-
-.header-contenedor .header .profile .profile-notification p {
-    color: #2D9CDB;
-    font-size: 18px;
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: 30px;
     margin-right: 30px;
 }
-.header-contenedor .header .profile p {
+
+.col-12 {
+    padding-left: 0;
+}
+
+.main .breadcrumb {
+    background: none;
+    margin-bottom: 0;
+    padding-left: 0;
+}
+
+.main .contenedor {
+    display: flex;
+}
+
+.main .contenedor .profile {
+    display: flex;
+}
+
+.main .contenedor .profile .admin-name{
+    color: #03080B;
+    margin-right: 5px;
     font-size: 14px;
-    font-weight: 500;
-    margin: 0;
 }
 
-.header-contenedor .header .profile .profile-img {
-    width: 45px;
-    height: 45px;
+.main .contenedor .profile .photo {
+    border: 2px solid #2D9CDB;
     border-radius: 100%;
-    border: 2px solid #9C9C9C;
+    width: 40px;
+    height: 40px;
     overflow: hidden;
-    margin-left: 10px;
 }
 
-.header-contenedor .header .profile .profile-img img {
+.main .contenedor .profile .photo a img {
     width: 100%;
 }
 
-/* --- --- TÍTULO H2 --- --- */
+/* --- --- CONTENEDOR FORMULARIO --- --- */
 
-.like-h2 {
+.main .title-h2 {
     display: inline-block;
     border-bottom: 2px solid #2D9CDB;
     font-size: 24px;
     font-weight: 400;
     margin-top: 25px;
-}
+} 
 
-.like-h2:after {
+.main .title-h2::after {
     content: "";
     position: absolute;
     display: block;
@@ -133,83 +117,188 @@ body {
     height: 0;
     left: 0;
     margin-top: 1px;
-    border-bottom: 1px solid #9C9C9C;
+    border-bottom: 1px solid #DCDCDC;
     z-index: -1;
 }
 
-
-main .contenedor-form {
+.agregar-filtros .formulario .formulario-title{
+    color: #2D9CDB;
+}
+.formulario,
+.contenedor-resultados {
+    border-radius: 10px;
     background: #fefefe;
-    margin: 20px;
     padding: 20px;
-    border-radius: 20px;
+    margin-top: 20px;
 }
-main .contenedor-form .title {
-    color: #2D9CDB;
+
+.formulario form {
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.formulario form .option {
     margin-bottom: 20px;
+    display: flex;
+    justify-content: space-between;
 }
 
-main .contenedor-form form .option select,
-main .contenedor-form form .option input {
-    border: 1px solid #dddddd;
+.formulario form .option input,
+.formulario form .option select {
+    border: 1px solid #DCDCDC;
     border-radius: 5px;
-    margin-bottom: 20px;
-    height: 30px;
-    width: 180px;
-    color: #DDDDDD;
-}
-
-main .contenedor-form form .sedes input{
-    border: 1px solid #dddddd;
-    border-radius:5px;
-    width: 180px;
-    height: 30px;
-    color: #dddddd;
-}
-
-main .contenedor-form form .puntos {
-    margin-right: 20px;
-}
-
-main .contenedor-form form .fila label {
-    color: #9C9C9C;
-}
-
-main .contenedor-form form .fila input {
-    margin-right: 40px;
-    margin-bottom: 15px;
-    border: 1px solid #dddddd;
-    border-radius: 5px;
-    color: #dddddd;
-    width: 70px;
-    height: 30px;
-}
-
-main .contenedor-form form .botones button {
-    height: 40px;
-    width: 150px;
-    border-radius: 5px;
-}
-
-main .contenedor-form form .botones .cancelar {
-    border: 2px solid #2D9CDB;
-    color: #2D9CDB;
     background: none;
-    margin-right: 20px;
-    font-weight: 500;
+    width: 190px;
+    height: 30px;
+    color: #03080B;
 }
 
-main .contenedor-form form .botones .cancelar:hover {
-    color: #fefefe;
-    background: #2D9CDB;
+.formulario form .botones {
+    display: flex;
+    justify-content: flex-end;
 }
 
-main .contenedor-form form .botones .crear {
-    background: #2D9CDB;
-    color: #fefefe;
+.formulario form .botones button {
+    border-radius: 5px;
+    width: 140px;
+    height: 40px;
+}
+
+.formulario form .botones .crear {
     border: none;
+    background: #2D9CDB;
+    color: #FEFEFE;
 }
 
-main .contenedor-form .botones .crear:hover {
+.formulario form .botones .crear:hover {
     background: #3384A5;
+}
+
+.formulario form .botones .cancelar {
+    border: 2px solid #2D9CDB;
+    background: none;
+    color: #2D9CDB;
+    margin-right: 20px;
+}
+
+.formulario form .botones .cancelar:hover {
+    background: #2D9CDB;
+    color: #FEFEFE;
+}
+
+.formulario form .puntos {
+    display: flex;
+}
+
+.formulario form .puntos .puntos-title {
+    margin-bottom: 5px;
+    margin-right: 20px;
+}
+
+.formulario form .puntos .rondas {
+    width: 140px;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
+
+.formulario form .puntos .rondas label {
+    color: #9D9D9D;
+}
+
+.formulario form .puntos .rondas input[type="text"] {
+    width: 50px;
+    border: 1px solid #DCDCDC;
+    border-radius: 5px;
+}
+
+/* --- --- MEDIAQUERY --- --- */
+
+@media screen and (max-width: 1300px) {
+
+    /* --- --- BARRA LATERAL --- --- */
+    .barra-lateral {
+        min-width: auto;
+    }
+
+    .barra-lateral .logo {
+        display: none;
+    }
+
+    .barra-lateral .menu a span {
+        display: none;
+    }
+
+    .barra-lateral .menu a i {
+        margin-right: 0;
+    }
+
+    /* --- AGREGAR FILTROS --- */
+
+    .formulario form .option,
+    .formulario form .puntos {
+        flex-direction: column;
+    }
+
+    .formulario form .option input {
+        width: 100%;
+    }
+
+    .formulario form .option input[type="text"],
+    .formulario form .option select {
+        width: 100%;
+    }
+
+    .formulario form  .radio{
+        margin-top: 33px;
+    }
+
+    .formulario form .radio {
+        margin-bottom: 48px;
+    }
+}
+
+@media screen and (max-width: 765px) {
+
+    .main .contenedor .notification span {
+        display: none;
+    }
+
+    .main .contenedor .profile {
+        display: none;
+    }
+
+    .formulario form .botones {
+        justify-content: center;
+    }
+}
+
+@media screen and (max-width: 575px) {
+
+    /* --- --- BARRA LATERAL --- --- */
+    .barra-lateral {
+        min-height: auto;
+    }
+
+    .barra-lateral .menu {
+        text-align: center;
+    }
+
+    .barra-lateral .menu a {
+        display: inline-block;
+    }
+
+    .formulario form .botones {
+        flex-direction: column;
+    }
+
+    .formulario form .botones .crear,
+    .formulario form .botones .cancelar {
+        width: 100%;
+    }
+
+    .formulario form .botones .crear {
+        order: -1;
+        margin-bottom: 20px;
+    }
 }
