--- a/PadelAdmin/css/fontello.css
+++ b/PadelAdmin/css/fontello.css
@@ -2,12 +2,12 @@
 
  @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?28073477');
-  src: url('../font/fontello.eot?28073477#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?28073477') format('woff2'),
-       url('../font/fontello.woff?28073477') format('woff'),
-       url('../font/fontello.ttf?28073477') format('truetype'),
-       url('../font/fontello.svg?28073477#fontello') format('svg');
+  src: url('../font/fontello.eot?85439488');
+  src: url('../font/fontello.eot?85439488#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?85439488') format('woff2'),
+       url('../font/fontello.woff?85439488') format('woff'),
+       url('../font/fontello.ttf?85439488') format('truetype'),
+       url('../font/fontello.svg?85439488#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -17,7 +17,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?28073477#fontello') format('svg');
+    src: url('../font/fontello.svg?85439488#fontello') format('svg');
   }
 }
 */
@@ -61,13 +61,23 @@
 .icon-home:before { content: '\2302'; } /* '⌂' */
 .icon-cog:before { content: '\2699'; } /* '⚙' */
 .icon-pencil:before { content: '\270e'; } /* '✎' */
+.icon-ok:before { content: '\2713'; } /* '✓' */
 .icon-eye:before { content: '\e013'; } /* '' */
 .icon-th-large-outline:before { content: '\e0f9'; } /* '' */
 .icon-th-list-outline:before { content: '\e0fb'; } /* '' */
 .icon-trash-empty:before { content: '\e729'; } /* '' */
 .icon-chart-pie:before { content: '\e751'; } /* '' */
+.icon-bold:before { content: '\e77a'; } /* '' */
+.icon-italic:before { content: '\e77b'; } /* '' */
+.icon-align-left:before { content: '\e77e'; } /* '' */
+.icon-align-center:before { content: '\e77f'; } /* '' */
+.icon-align-right:before { content: '\e780'; } /* '' */
 .icon-user:before { content: '\e807'; } /* '' */
 .icon-logout:before { content: '\e808'; } /* '' */
+.icon-list-bullet:before { content: '\f0ca'; } /* '' */
+.icon-list-numbered:before { content: '\f0cb'; } /* '' */
+.icon-money:before { content: '\f0d6'; } /* '' */
+.icon-unlink:before { content: '\f127'; } /* '' */
 .icon-dollar:before { content: '\f155'; } /* '' */
 .icon-sliders:before { content: '\f1de'; } /* '' */
 .icon-award:before { content: '🏉'; } /* '\1f3c9' */
@@ -77,3 +87,4 @@
 .icon-newspaper:before { content: '📰'; } /* '\1f4f0' */
 .icon-search:before { content: '🔍'; } /* '\1f50d' */
 .icon-bell:before { content: '🔔'; } /* '\1f514' */
+.icon-link:before { content: '🔗'; } /* '\1f517' */
