--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1303,6 +1303,175 @@ body {
     padding: 10px;
 }
 
+/* --- --- DRAW LLAVE --- --- */
+
+.titleDrawLlave {
+    min-width: 925px;
+    display: flex;
+    background: #DCDCDC;
+    padding: 15px;
+}
+
+.titleDrawLlave .R32{
+    width: 200px;
+}
+
+.titleDrawLlave .R16 {
+    width: 124px;
+    margin-left: 20px;
+}
+
+.titleDrawLlave .QF {
+    width: 124px;
+    margin-left: 10px;
+}
+
+.titleDrawLlave .SF {
+    width: 124px;
+    margin-left: 10px;
+}
+
+.titleDrawLlave .F {
+    width: 124px;
+    margin-left: 10px;
+} 
+
+.titleDrawLlave .ganador {
+    width: 124px;
+    margin-left: 10px;
+}
+
+.containerDrawLlave {
+    display: flex;
+}
+
+.containerDrawLlave .jugador-DrawLlave {
+    width: 200px;
+    display: flex;
+    border: 1px solid #9C9C9C;
+    padding: 8px;
+    align-items: center;
+}
+
+.containerDrawLlave p {
+    margin: 0;
+    font-size: 14px;
+    color: #03080B;
+}
+
+.containerDrawLlave .jugador-DrawLlave .flag-DrawLlave {
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+.containerDrawLlave .R16-jugador,
+.QF-jugador,
+.SF-jugador,
+.F-jugador,
+.ganador-jugador {
+    border: 1px solid #9C9C9C;
+    border-left: none;
+    width: 124PX;
+    height: 64px;
+    margin-left: 10PX;
+    display: flex;
+    margin-top: 12px;
+    margin-bottom: 26px;
+}
+.R-16-jugador:last-child, 
+.QF-jugador:last-child,
+.SF-jugador:last-child,
+.F-jugador:last-child,
+.ganador-jugador:last-child {
+    margin-bottom: 0;
+}
+
+
+.QF-jugador {
+    margin-bottom: 117px;
+    margin-top: 55px;
+}
+
+.SF-jugador {
+    margin-top: 143px;
+    margin-bottom: 300px;
+}
+
+.F-jugador {
+    margin-top: 320px;
+    margin-bottom: 675px;
+}
+
+.ganador-jugador {
+    margin-top: 700px;
+}
+
+.info-contenedor-jugador-DrawLlave {
+    padding-top: 2px;
+}
+
+.containerDrawLlave .R16-jugador .link-DrawLlave,
+.QF-jugador .link-DrawLlave,
+.SF-jugador .link-DrawLlave,
+.F-jugador .link-DrawLlave,
+.ganador-jugador .link-DrawLlave {
+    width: 10px;
+    height: 100%;
+    background: #2D9CDB;
+    margin-right: 8px;
+}
+
+/* ---- --- ACOMODOR EL LINK DE SF --- --- */
+.SF-jugador .link-DrawLlave {
+
+}
+
+.containerDrawLlave .R16-jugador .link-DrawLlave:hover,
+.QF-jugador .link-DrawLlave:hover,
+.SF-jugador .link-DrawLlave:hover,
+.F-jugador .link-DrawLlave:hover,
+.ganador-jugador .link-DrawLlave:hover {
+    background: #3384A5;
+}
+
+.containerDrawLlave .R16 .R16-jugador .container-R16-jugador,
+.QF .QF-jugador .container-QF-jugador,
+.SF-jugador .container-SF-jugador,
+.F-jugador .container-F-jugador,
+.ganador-jugador .container-ganador-jugador {
+    display: flex;
+}
+
+.containerDrawLlave .R16 .R16-jugador .container-R16-jugador .img-R16-jugador,
+.QF .QF-jugador .container-QF-jugador .img-QF-jugador,
+.SF-jugador .container-SF-jugador .img-SF-jugador,
+.F-jugador .container-F-jugador .img-F-jugador,
+.ganador-jugador .container-ganador-jugador .img-ganador-jugador {
+    border: 1px solid #9C9C9C;
+    border-radius: 100%;
+    min-width: 37px;
+    max-width: 37px;
+    min-height: 37px;
+    max-height: 37px;
+    margin-right: 10px;
+    overflow: hidden;
+}
+
+.containerDrawLlave .R16 .R16-jugador .container-R16-jugador .img-R16-jugador img,
+.QF .QF-jugador .container-QF-jugador .img-QF-jugador img,
+.SF-jugador .container-SF-jugador .img-SF-jugador img,
+.F-jugador .container-F-jugador .img-F-jugador img,
+.ganador-jugador .container-ganador-jugador .img-ganador-jugador img{
+    width: 100%;
+}
+
+.containero-resultado-drawLlave {
+    display: flex;
+    justify-content: flex-end;
+    margin-left: 35px;
+}
+
+
 /* --- --- MEDIAQUERY --- --- */
 
 @media screen and (max-width: 1199px) {
